[package]
name = "catficate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.5.17"
axum-macros = "0.2"
anyhow = "1.0"
rsa = "0.5"
base64 = "0.21.0"
openssl = "0.10.52"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.87"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10"
futures = "0.3.28"
libp2p = { version = "0.51.3" , features = ["async-std", "dns", "kad", "mdns", "noise", "macros", "tcp", "websocket", "yamux"] }
multiaddr = { version = "0.17.1" }